--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "faunadb": "^4.4.1",
     "next": "10.2.0",
+    "next-auth": "^3.24.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "sass": "^1.32.13",
+    "stripe": "^8.149.0"
+  },
+  "devDependencies": {
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^15.3.0",
+    "@types/react": "^17.0.5",
+    "typescript": "^4.2.4"
   }
 }
