--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "@stripe/stripe-js": "^1.20.3",
     "axios": "^0.24.0",
     "faunadb": "^4.4.1",
     "next": "10.2.0",
     "next-auth": "^3.24.0",
+    "prismic-dom": "^2.2.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/node": "^15.3.0",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.5",
     "typescript": "^4.2.4"
   }
